--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "3D Audio Game Engine",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "run-browser test/index.js -m test/mock/server.js -b | tap-spec",
+      "browser": "run-browser test/index.js -m test/mock/server.js "
   },
   "repository": {
     "type": "git",
@@ -30,5 +31,10 @@
     "howler": "^2.0.0-beta13",
     "rx": "^4.1.0",
     "vektor": "^0.3.0"
+  },
+  "devDependencies": {
+    "run-browser": "naugtur/run-browser",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.5.1"
   }
 }
