--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --bail",
+    "build-tests": "webpack --config webpack.tests.js",
     "start": "webpack -w",
-    "test": "standard ./lib/* ./test/*",
-    "test-TODO": "standard ./lib/* ./test/* && webpack-dev-server --config webpack.tests.js"
+    "lint": "standard ./lib/* ./test/*",
+    "test-auto": "npm run build-tests && browser-run < ./testbuild.js | faucet",
+    "test": "npm-run-all --parallel test-auto lint"
   },
   "repository": {
     "type": "git",
@@ -36,12 +38,12 @@
     "vektor": "^0.3.0"
   },
   "devDependencies": {
-    "mocha": "^2.5.3",
-    "mocha-loader": "^0.7.1",
-    "open-browser-webpack-plugin": "0.0.2",
+    "browser-run": "^3.3.0",
+    "faucet": "0.0.1",
+    "npm-run-all": "^3.1.1",
     "pre-commit": "^1.1.3",
     "standard": "^7.1.2",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "tape": "^4.6.2",
+    "webpack": "^1.13.1"
   }
 }
