--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3dage",
-  "version": "1.0.0",
+  "version": "1.0.0-prealpha",
   "description": "3D Audio Game Engine",
   "main": "index.js",
   "scripts": {
