--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "faucet": "0.0.1",
     "npm-run-all": "^3.1.1",
     "pre-commit": "^1.1.3",
+    "rxjs-testscheduler-bootstrapper": "0.0.2",
     "standard": "^7.1.2",
     "tape": "^4.6.2",
     "tape-catch": "^1.0.6",
