--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build-tests": "webpack --config webpack.tests.js",
     "start": "webpack -w",
     "lint": "standard ./lib/* ./test/* ./mixins/*",
+    "lintfix": "standard --fix ./lib/* ./test/* ./mixins/*",
     "test-auto": "npm run build-tests && browser-run --static ./test/resources < ./testbuild.js | faucet",
     "test-ff": "browser-run -b firefox --static ./test/resources < ./testbuild.js | faucet",
     "test-chrome": "browser-run -b chrome --static ./test/resources < ./testbuild.js | faucet",
@@ -36,12 +37,9 @@
   "homepage": "https://github.com/naugtur/3dage",
   "dependencies": {
     "howler": "^2.0.1",
+    "kefir": "^3.7.2",
     "ramda": "^0.23.0",
-    "rxjs": "^5.3.0",
-    "standard": "^8.5.0",
-    "vectors": "^0.1.0",
-    "vektor": "^0.3.0",
-    "webpack": "^1.13.3"
+    "vectors": "^0.1.0"
   },
   "devDependencies": {
     "browser-run": "^3.3.0",
@@ -49,10 +47,9 @@
     "faucet": "0.0.1",
     "npm-run-all": "^3.1.1",
     "pre-commit": "^1.1.3",
-    "rxjs-testscheduler-bootstrapper": "0.0.2",
-    "standard": "^7.1.2",
+    "standard": "^10.0.2",
     "tape": "^4.6.2",
     "tape-catch": "^1.0.6",
-    "webpack": "^1.13.1"
+    "webpack": "^3.0.0"
   }
 }
