--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3dage",
-  "version": "1.0.0-prealpha",
+  "version": "1.0.0-prealpha.0",
   "description": "3D Audio Game Engine",
   "main": "index.js",
   "scripts": {
@@ -19,7 +19,9 @@
     "type": "git",
     "url": "https://github.com/naugtur/3dage.git"
   },
-  "files": ["dist/3dage*"],
+  "files": [
+    "dist/3dage*"
+  ],
   "keywords": [
     "3d",
     "audio",
