--- a/package.json
+++ b/package.json
@@ -42,21 +42,21 @@
   },
   "homepage": "https://github.com/naugtur/3dage",
   "dependencies": {
-    "howler": "^2.0.4",
-    "kefir": "^3.7.2",
+    "howler": "^2.0.15",
+    "kefir": "^3.8.5",
     "ramda": "^0.23.0",
     "vectors": "^0.1.0"
   },
   "devDependencies": {
-    "browser-run": "3.5.0",
+    "browser-run": "^5.0.0",
     "check-more-types": "^2.23.0",
     "faucet": "0.0.1",
     "ghpages": "0.0.10",
     "npm-run-all": "^3.1.1",
     "pre-commit": "^1.1.3",
-    "standard": "^10.0.2",
-    "tape": "^4.6.2",
+    "standard": "^12.0.1",
+    "tape": "^4.9.1",
     "tape-catch": "^1.0.6",
-    "webpack": "^3.0.0"
+    "webpack": "^3.12.0"
   }
 }
